feature/master - Change structure for client