@@ -6,6 +6,6 @@ public class SupportedLocales {
 
     public static final Locale EN = Locale.ENGLISH;
 
-    public static final Locale RU = Locale.of("ru", "RU");
+    public static final Locale RU = new Locale("ru", "RU");
 
 }
